IDP-1516 Reduce guava dependence idp-attribute-resolver-impl
https://issues.shibboleth.net/jira/browse/IDP-1516